fixes sticky hover style on button and border on footer when on mobile

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -43,4 +43,8 @@
     margin-top: 0px;
     padding-top: 3rem;
   }
+
+  .footer {
+    border-top: none;
+  }
 }
